--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortFolio</title>
-    <link rel="stylesheet" href="/pcss/home.css">
+    <link rel="stylesheet" href="home.css">
     <script src="https://kit.fontawesome.com/3513e8468e.js" crossorigin="anonymous"></script>
 </head>
 
