image link update

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         according
                         to the project's requirements.</p>
                     <div class="btns">
-                        <a href="/phtml/contact.html"><button>Hire Me</button></a>
-                        <a href="/phtml/contact.html"><button onclick="">Let's Talk</button></a>
+                        <a href="contact.html"><button>Hire Me</button></a>
+                        <a href="contact.html"><button onclick="">Let's Talk</button></a>
                     </div>
                     <div class="links">
                         <a href="https://www.instagram.com/mukeshkumhar906/"><i class="fa-brands fa-instagram"></i></a>
@@ -53,8 +53,8 @@
             </div>
             <div class="cols cols1" style="position: relative; top: 5vw;">
                 <div class="imgbox">
-                    <img src="/Images/bg.png" id="splash" style="filter: blur(10px);">
-                    <img src="/Images/Mukesh.png" id="photo">
+                    <img src="bg.png" id="splash" style="filter: blur(10px);">
+                    <img src="Mukesh.png" id="photo">
                 </div>
             </div>
         </div>
