--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         according
                         to the project's requirements.</p>
                     <div class="btns">
-                        <a href="/phtml/contact.html"><button>Hire Me</button></a>
-                        <a href="/phtml/contact.html"><button onclick="">Let's Talk</button></a>
+                        <a href="contact.html"><button>Hire Me</button></a>
+                        <a href="contact.html"><button onclick="">Let's Talk</button></a>
                     </div>
                     <div class="links">
                         <a href="https://www.instagram.com/mukeshkumhar906/"><i class="fa-brands fa-instagram"></i></a>
