--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
                     <h1>Mukesh Kumhar</h1>
                     <h2>And i'm a <span class="multiText"></span></h2>
                     <p id="coment" >
-                        I am a versatile and dedicated Full Stack Developer with two years of experience in this field.
-                        My
-                        expertise spans both frontend and backend development, with a strong foundation in HTML, CSS,
-                        JavaScript, C++, Python, and Java. Over the course of my career, I have successfully completed
-                        numerous projects utilizing these languages, demonstrating my ability to adapt and learn
-                        according
-                        to the project's requirements.</p>
+                        Passionate software developer with a love for elegant code and problem-solving.
+                        Crafting digital solutions that make the world run smoother, one line of code at a time.
+                        Constantly learning, adapting, and pushing the boundaries of technology to create impactful software.
+                        Enthusiast for innovation, teamwork, and turning complex challenges into elegant solutions.</p>
                     <div class="btns">
                         <a href="contact.html"><button>Hire Me</button></a>
                         <a href="contact.html"><button onclick="">Let's Talk</button></a>
@@ -63,7 +60,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typingEffect = new Typed(".multiText", {
-            strings: ["Frontend", "Backend", "Developer."],
+            strings: ["Software", "Developer."],
             loop: true,
             typeSpeed: 100,
             backSpeed: 80,
