--- a/About.html
+++ b/About.html
@@ -27,11 +27,11 @@
                 <img src="Mukesh.png" id="Image">
                 <div class="aboutus">
                     <div class="about-text">
-                        <h1>About Us</h1>
-                        <h5>Developer <span>& Designer</span></h5>
-                        <p>My experience has equipped me with a comprehensive understanding of the full lifecycle of web
-                            development projects.My ability to quickly grasp new technologies and tools pairs well with
-                            my problem-solving skills, allowing me to deliver efficient and robust solutions.</p>
+                        <h1>About Me</h1>
+                        <h5>Software <span>& Developer</span></h5>
+                        <p>Hey there! I'm Mukesh Kumhar, a passionate software developer with a focus on Android app development. 
+                            I turn ideas into reality through clean and user-friendly code. 
+                            Explore my app portfolio and let's connect to build something amazing together! 📱🚀</p>
                         <a href="contact.html"><button type="button">Let's Talk</button></a>
                     </div>
                 </div>
